# showy-quota

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  showy-quota.tmux
.cargo/: audit.toml
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
adapters/agent-cli/: showy-quota-statusline
adapters/tmux/: detail-popup.tmux.fragment  status-line.tmux.fragment
adapters/zellij/: detail-pane.kdl.fragment  layout-pane.kdl.fragment
crates/showy-quota-zellij/: Cargo.toml
crates/showy-quota-zellij-core/: Cargo.toml
crates/showy-quota-zellij-core/src/: cache.rs  codexbar.rs  config.rs  lib.rs  metrics.rs  palette.rs  prompt.rs  render.rs  reset.rs  sketchybar.rs
crates/showy-quota-zellij-core/tests/: render_cli.rs  shell_parity.rs
docs/: architecture.md  automation.md  plugin.md  roadmap.md  sketchybar.md  statusline.md  tmux.md  zellij.md
docs/scripts/: capture-terminal-themes.sh  generate-sketchybar-theme-previews.sh  preview-mono3-markers.py  preview-quad-octants.py
lib/: common.sh  strip.sh
scripts/: capture-terminal-themes.sh  check_plugin_exports.py  generate-sketchybar-theme-previews.sh  package-release.sh  preview-mono3-markers.py
share/: config.env.example
share/themes/: carbonfox.env  catppuccin-frappe.env  catppuccin-latte.env  catppuccin-macchiato.env  catppuccin-mocha-blue.env  catppuccin-mocha.env  default.env  dracula.env  gruvbox-dark.env  nord.env  tokyonight.env
sketchybar/items/: cb_bars.sh  showy_bar.sh
sketchybar/plugins/: cb_bars.sh  showy_bar.sh  showy_quota.sh
test/: render_test.sh
tmux/: detail-popup.tmux.fragment  status-line.tmux.fragment
zellij/: detail-pane.kdl.fragment  layout-pane.kdl.fragment
(+25 files in other folders)
