[workspace]
members = [
    "crates/showy-quota-zellij-core",
    "crates/showy-quota-zellij",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/enieuwy/showy-quota"
rust-version = "1.88"
version = "0.4.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "debuginfo"
