[package]
name = "showy-quota-zellij-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "=0.3.53", features = ["formatting", "local-offset", "macros", "parsing"] }

[[bin]]
name = "showy-quota-render"
path = "src/bin/showy-quota-render.rs"
